3045
The order that files are compiled seems to trigger different errors (or perhaps in Mark's case, success).

I've captured the particular order of compilation that triggered the problem independently of SBT. See the attached zip file for both the code and the option files for scalac.
```scala
E:\code\scalaz>e:\tools\scala-2.8.0.latest\bin\scalac -version
Scala compiler version 2.8.0.r20024-b20091207020224 -- Copyright 2002-2009, LAMP
/EPFL

E:\code\scalaz>e:\tools\scala-2.8.0.latest\bin\scalac @compile-both.txt

E:\code\scalaz>e:\tools\scala-2.8.0.latest\bin\scalac @compile-core.txt

E:\code\scalaz>e:\tools\scala-2.8.0.latest\bin\scalac @compile-http.txt
E:\code\scalaz\http\src\main\scala\scalaz\http\Version.scala:93: error: could no
t find implicit value for parameter a: scalaz.Applicative[Option]
      List(major, minor) ? ((c: Char) => isDigit(c).option(c.toLong - 48L)) map
{ case List(maj, min) => version(maj, min) }
                         ^
one error found
```

